bk_ida/gccida/g2/_yylex
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_yylex/src/c-parse.c:5417:23: error: use of undeclared identifier 'cpp_ttype'
v1 = cpp_type2name( ( cpp_ttype)v0); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_yylex/src/c-parse.c:5545:1: error: redefinition of 'yylex'
yylex()
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_yylex/src/c-parse.c:5351:6: note: previous definition is here
int  yylex( ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/_yylex/src/obj/c-parse.o] Error 1
